2022/national/day1/stress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stress-ingress
  namespace: skills
  annotations:
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/target-node-labels: skills/dedicated=app
    alb.ingress.kubernetes.io/subnets: subnet-0c9cfb3b7846d7fc9,subnet-076f5faa29fbf0f90,subnet-0658540e2b1a5746f
    alb.ingress.kubernetes.io/healthcheck-path: /health
    alb.ingress.kubernetes.io/actions.response-403: '{"type":"fixed-response","fixedResponseConfig":{"contentType":"text/plain","statusCode":"403","messageBody":"403 External access to endpoint not allowed"}}'
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/v1"
        backend:
          service:
            name: stress-svc
            port: 
              number: 80
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: response-403
            port:
              name: use-annotation
