2022/national/day1/stress/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: stress-networkpolicy
  namespace: skills
spec:
  podSelector:
    matchLabels:
      type: stress
  policyTypes:
    - Ingress
  ingress:
    - from: []
